# http-server

./: .gitignore  CMakeLists.txt  main.c  russia.txt  test.html
.cache/clangd/index/: main.c.4C1C924539596E69.idx  test_main.c.E89E12486A8368D0.idx
include/: flags.h  progargs.h  request.h  response.h  util.h
source/: main.c  test.c
src/: flags.c  main.c  progargs.c  request.c  response.c  test.c  util.c
tests/: CMakeLists.txt  test.c  test_main.c
